# wirt-collision-rs

./: Cargo.toml  LICENSE
src/: constraint.rs  debug_renderable.rs  main.rs  util.rs  world.rs
src/bsp/: aabb.rs  entry.rs  grid.rs  mod.rs  node.rs  partition.rs  quadtree.rs  tree.rs
src/collision_resolution/: collider.rs  collision_detection.rs  collision_event.rs  mod.rs  solver.rs
src/primitive/: body.rs  hybrid_vec.rs  mass.rs  mod.rs  shape.rs  stack_vec.rs  vec2.rs
